<resources>
    <string name="app_name">Viki</string>
    <string name="default_channel_id" translatable="false">Viki</string>
    <string name="default_channel_description" translatable="false">Viki General Notification</string>
    <string name="search_property">Search Property</string>
    <string name="new_property">New Property</string>
    <string name="filters">Filters</string>
    <string name="filter_property_type">Properties Type</string>
    <string name="filter_city">Cities</string>
    <string name="filter_operation">Operation</string>
    <string name="new_request">New Request</string>
    <string name="visit_your_profile">Visit your profile</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="allow_access">Allow access</string>
    <string name="allow_access_detail_storage">Allow Viki to access your Gallery</string>
    <string name="allow_access_detail_location">Allow Viki to access your Location</string>
    <string name="not_now">Not now</string>
    <string name="properties">Properties</string>
    <string name="requests">Requests</string>
    <string name="map_view">Map View</string>
    <string name="description">Description</string>
    <string name="city">City</string>
    <string name="retry">Retry</string>
    <string name="type">Property Type</string>
    <string name="floor_plan">Floor Plan</string>
    <string name="price">Price</string>
    <string name="currency">Currency</string>
    <string name="area">Area</string>
    <string name="unit">Unit</string>
    <string name="operation">Sales / Rent</string>
    <string name="address">Address</string>
    <string name="apartment">Apartment</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="logout">LogOut</string>
    <string name="profile_title">Profile</string>
    <string name="change_password_title">Change Password</string>
    <string name="property_details">Property Details</string>
    <string name="property_description">Property Description</string>
    <string name="property_location_in_map">Property Location in Map</string>
    <string name="request_description">Request Description</string>
    <string name="request_location_in_map">Request Location in Map</string>
    <string name="request_location">Request Location</string>
    <string name="request_details">Request Details</string>
    <string name="agent">Agent</string>
    <string name="agent_item">%s %s</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="request_new_account">Request new account</string>
    <string name="request_account">Request Account</string>

    <string name="permission_denied">Permission Denied</string>
    <string name="app_version">App Version</string>
    <string name="all">All</string>
    <!-- Property Item -->
    <string name="item_title">Apartment</string>
    <string name="price_item">%.2f %s</string>
    <string name="price_item_per_unit">%.2f %s/%s</string>
    <string name="item_address">Rruga Robert Zhvarc</string>
    <string name="item_floor_plan_item">4 + 1</string>
    <string name="area_item">%s %s</string>
    <string name="operation_item">For Sales</string>
    <string name="personal_information_first_and_last_name">%s %s</string>
    <string name="personal_information_label">Personal Information</string>
    <string name="change_password">Change Password</string>
    <string name="delete_messages">Are you sure you want to delete: %s</string>
    <string name="delete_property_title">Delete Property</string>
    <string name="delete_request_title">Delete Request</string>
    <string name="ok_title">OK</string>
    <string name="cancel_title">Cancel</string>
    <string name="delete">delete</string>
</resources>