<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/menu_new_order"
            android:icon="@drawable/ic_outlined_arrow_right"
            android:title="@string/new_order" />
        <item android:id="@+id/menu_new_request"
            android:icon="@drawable/ic_outlined_arrow_left"
            android:title="@string/new_request" />
    </group>
    <group>
        <item android:id="@+id/menu_apartment"
            android:icon="@drawable/ic_outlined_arrow_left"
            android:title="@string/apartment" />
    </group>
    <group
        android:id="@+id/group_menu_share">
        <item android:id="@+id/menu_share"
            android:icon="@drawable/ic_outlined_share"
            android:title="@string/share" />
    </group>
    <group>
        <item android:id="@+id/menu_settings"
            android:icon="@drawable/ic_outlined_settings"
            android:title="@string/settings" />
    </group>
    <group>
        <item android:id="@+id/menu_logout"
            android:icon="@drawable/ic_outlined_logout"
            android:title="@string/logout" />
    </group>
</menu>