<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="request"
            type="al.viki.model.RequestUi" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_outline_close"
                app:menu="@menu/menu_item_detail"
                app:title="@string/request_details" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/micro_dimen"
                android:layout_margin="@dimen/micro_dimen">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{@string/price_item((request.price * request.area), request.code)}"
                    android:textColor="@color/vikiColorRed"
                    android:layout_marginTop="@dimen/micro_dimen"
                    tools:text="@string/property_price"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{@string/price_item_per_unit(request.price, request.code, request.unit)}"
                    android:layout_marginTop="@dimen/micro_dimen"
                    tools:text="@string/property_price"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/request_description"
                    android:layout_marginTop="@dimen/micro_dimen"
                    android:textStyle="bold"
                    tools:text="@string/request_description"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{request.description}"
                    android:layout_marginTop="@dimen/micro_dimen"
                    tools:text="@string/request_description"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/request_location_in_map"
                    android:layout_marginTop="@dimen/micro_dimen"
                    android:textStyle="bold"
                    tools:text="@string/request_location_in_map"/>
                <fragment
                    android:id="@+id/details_property_location_in_map"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    map:mapType="normal"
                    map:liteMode="true"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/details_property_agent_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agent"
                    android:layout_marginTop="@dimen/micro_dimen"
                    android:textStyle="bold"
                    tools:text="@string/agent"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/details_property_agent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{@string/agent_item(request.firstName, request.lastName)}"
                    android:layout_marginTop="@dimen/micro_dimen"
                    tools:text="@string/agent"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
