<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/micro_dimen"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:endIconDrawable="@drawable/ic_outline_clear"
        app:hintEnabled="false"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_outline_search"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintBottom_toTopOf="@id/header">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/micro_dimen"
            android:background="@null"
            android:hint="@string/search_property"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:selectAllOnFocus="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_dimen"
        app:srcCompat="@drawable/ic_outline_more_vert"
        app:layout_constraintTop_toTopOf="@id/search_input_layout"
        app:layout_constraintBottom_toBottomOf="@id/search_input_layout"
        app:layout_constraintStart_toEndOf="@id/search_input_layout"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/micro_dimen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nav_viki_fragment"
        app:layout_constraintTop_toBottomOf="@id/search_input_layout">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="@dimen/small_dimen"
            android:drawablePadding="@dimen/small_dimen"
            android:text="@string/properties"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/ic_outline_swap_horiz"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/filter"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="@dimen/small_dimen"
            android:drawablePadding="@dimen/small_dimen"
            android:text="@string/filters"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/ic_outline_filter_list"/>
    </LinearLayout>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_viki_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_viki" />
</androidx.constraintlayout.widget.ConstraintLayout>