<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="currencyAdapter"
            type="al.bruno.adapter.DropDownAdapter" />

        <variable
            name="unitAdapter"
            type="al.bruno.adapter.DropDownAdapter" />

        <variable
            name="cityAdapter"
            type="al.bruno.adapter.DropDownAdapter" />

        <variable
            name="propertyTypeAdapter"
            type="al.bruno.adapter.DropDownAdapter" />

        <variable
            name="operationAdapter"
            type="al.bruno.adapter.DropDownAdapter" />

        <variable
            name="filter"
            type="al.viki.model.FilterUi" />

        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/filter_app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/filter_properties_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:menu="@menu/menu_apply"
                app:navigationIcon="@drawable/ic_outline_close"
                app:title="@string/filters" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/filter_properties_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onCheckedChanged="@{filter::onCheckedChanged}"
            android:checked="@={filter.isProperties()}"
            android:layout_marginEnd="@dimen/micro_dimen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/filter_properties_label"
            app:layout_constraintTop_toBottomOf="@+id/filter_app_bar_layout"
            app:layout_constraintBottom_toTopOf="@+id/filter_entity_type"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/filter_properties_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{filter.isProperties() ? @string/properties : @string/requests}"
            android:layout_marginStart="@dimen/micro_dimen"
            style="@style/TextAppearance.Material3.LabelLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/filter_properties_type"
            app:layout_constraintTop_toTopOf="@+id/filter_properties_type"
            app:layout_constraintBottom_toBottomOf="@+id/filter_properties_type"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/filter_entity_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:layout_marginStart="@dimen/micro_dimen"
            style="@style/Viki.PrimaryText.Label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_properties_type"
            app:layout_constraintBottom_toTopOf="@+id/filter_property_type"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/filter_property_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/micro_dimen"
            android:adapter="@{propertyTypeAdapter}"
            android:onItemSelected="@{filter::onItemSelected}"
            app:layout_constraintBottom_toTopOf="@+id/filter_entity_operation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_entity_type" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/filter_entity_operation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/operation"
            android:layout_marginStart="@dimen/micro_dimen"
            android:visibility="@{filter.isProperties() ? View.VISIBLE : View.GONE }"
            style="@style/Viki.PrimaryText.Label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_property_type"
            app:layout_constraintBottom_toTopOf="@+id/filter_operation"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/filter_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/micro_dimen"
            android:visibility="@{filter.isProperties() ? View.VISIBLE : View.GONE }"
            android:adapter="@{operationAdapter}"
            android:onItemSelected="@{filter::onItemSelected}"
            app:layout_constraintBottom_toTopOf="@+id/filter_entity_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_entity_operation" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/filter_entity_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:layout_marginStart="@dimen/micro_dimen"
            style="@style/Viki.PrimaryText.Label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_operation"
            app:layout_constraintBottom_toTopOf="@+id/filter_city"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/filter_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/micro_dimen"
            android:adapter="@{cityAdapter}"
            android:onItemSelected="@{filter::onItemSelected}"
            app:layout_constraintBottom_toTopOf="@+id/filter_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_entity_city" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter_price"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/micro_dimen"
            app:endIconDrawable="@drawable/ic_outline_clear"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/filter_area"
            app:layout_constraintEnd_toStartOf="@+id/filter_currency"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_city">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLines="2"
                android:selectAllOnFocus="true"
                android:text="@={filter.price}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/filter_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/micro_dimen"
            android:adapter="@{currencyAdapter}"
            android:onItemSelected="@{filter::onItemSelected}"
            app:layout_constraintBottom_toBottomOf="@+id/filter_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/filter_price"
            app:layout_constraintTop_toTopOf="@+id/filter_price" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter_area"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/micro_dimen"
            app:endIconDrawable="@drawable/ic_outline_clear"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/filter_unit"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_price">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/area"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLines="2"
                android:selectAllOnFocus="true"
                android:text="@={filter.area}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/filter_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/micro_dimen"
            android:adapter="@{unitAdapter}"
            android:onItemSelected="@{filter::onItemSelected}"
            app:layout_constraintBottom_toBottomOf="@+id/filter_area"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/filter_area"
            app:layout_constraintTop_toTopOf="@+id/filter_area" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>